--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--735146352\testng-customsuite.xml</span>
+                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1298120222\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,32 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User tries to access dashboard directly without login&quot;, &quot;Direct dashboard access restriction&quot;)">runScenario("User tries to access dashboard directly without login", "Direct dashboard access restriction")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -151,60 +126,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">
-                  </a> <!-- runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu") -->
+                  <a name="runScenario(&quot;User tries to access dashboard directly without login&quot;, &quot;Direct dashboard access restriction&quot;)">
+                  </a> <!-- runScenario("User tries to access dashboard directly without login", "Direct dashboard access restriction") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("When clicking to navigate to the right webpage","Functionality test on navigation menu")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">
-                  </a> <!-- runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("When clicking to navigate to the right webpage","Functionality test on navigation menu")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">
-                  </a> <!-- runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("When clicking to navigate to the right webpage","Functionality test on navigation menu")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">
-                  </a> <!-- runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("When clicking to navigate to the right webpage","Functionality test on navigation menu")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">
-                  </a> <!-- runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("When clicking to navigate to the right webpage","Functionality test on navigation menu")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;When clicking to navigate to the right webpage&quot;, &quot;Functionality test on navigation menu&quot;)">
-                  </a> <!-- runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("When clicking to navigate to the right webpage","Functionality test on navigation menu")</span>
+                  <span class="parameters">("User tries to access dashboard directly without login","Direct dashboard access restriction")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -214,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--735146352\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1298120222\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -271,36 +196,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runners.TestRunner')
-data.setCell(0, 3, 8370);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'runners.TestRunner')
-data.setCell(1, 3, 7163);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'runners.TestRunner')
-data.setCell(2, 3, 6727);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'runScenario')
-data.setCell(3, 2, 'runners.TestRunner')
-data.setCell(3, 3, 6693);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'runScenario')
-data.setCell(4, 2, 'runners.TestRunner')
-data.setCell(4, 3, 6544);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'runScenario')
-data.setCell(5, 2, 'runners.TestRunner')
-data.setCell(5, 3, 5866);
+data.setCell(0, 3, 3366);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 41 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -328,36 +233,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">runners.TestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@42cc183e)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@70101687)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</span>
-                <span class="method-start">769 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</span>
-                <span class="method-start">9150 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</span>
-                <span class="method-start">16317 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</span>
-                <span class="method-start">22867 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</span>
-                <span class="method-start">29597 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("When clicking to navigate to the right webpage", "Functionality test on navigation menu")</span>
-                <span class="method-start">35468 ms</span>
+                <span class="method-name">runScenario("User tries to access dashboard directly without login", "Direct dashboard access restriction")</span>
+                <span class="method-start">462 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">42167 ms</span>
+                <span class="method-start">3832 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
